# business-chat-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend-python/: .env.example  Dockerfile  README.md  copilot-instructions.md  docker-compose.yml  pyproject.toml  requirements.txt
backend-python/app/: config.py  main.py
backend-python/app/agent/: orchestrator.py
backend-python/app/agent_runtime/: agent_config.py  lifecycle.py  runtime.py
backend-python/app/api/routes/: audit.py  chat.py  documents.py  health.py  plans.py  scheduler.py
backend-python/app/domain/: schemas.py
backend-python/app/gateway/: __init__.py  message.py
backend-python/app/multi_agent/: __init__.py  models.py  team.py
backend-python/app/planning/: __init__.py  executor.py  models.py  planner.py
backend-python/app/scheduler/: __init__.py  service.py
backend-python/app/services/: embeddings.py  llm.py  milvus_store.py
backend-python/app/tools/: base.py  registry.py
backend-python/app/workspace/: loader.py  models.py
backend-python/deploy/mysql/: schema.sql
backend-python/scripts/: api_workflow_demo.py  build_policy_rag.py  evaluate_policy_rag.py  ingest_policy_doc.py
backend-python/tests/: conftest.py  test_audit.py  test_config.py  test_health.py  test_multi_agent_team.py  test_persistent_memory.py  test_plan_executor.py  test_planning.py  test_policy_ingestion.py  test_policy_vector_store.py  test_real_chinese_planning.py  test_scheduler.py  test_tool_registry.py  test_travel_tools.py  test_workspace_loader.py
(+51 files in other folders)
