[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "travel-agent-guide"
version = "0.1.0"
description = "Enterprise AI agent for business travel (商旅差旅助手)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "商旅-agent-guide Team" }]
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.0",
  "pydantic==2.9.0",
  "pydantic-settings==2.5.0",
  "openai==1.50.0",
  "httpx==0.27.0",
  "redis==5.1.0",
  "aiomysql==0.2.0",
  "cryptography>=42.0.0",
  "sqlalchemy[asyncio]==2.0.35",
  "aiosqlite==0.20.0",
  "pymilvus==3.0.0",
  "milvus-lite==3.0",
  "marshmallow<4",
  "environs<11",
  "python-dotenv==1.0.1",
  "PyYAML==6.0.2",
  "structlog==24.4.0",
  "opentelemetry-api==1.27.0",
  "opentelemetry-sdk==1.27.0",
  "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
